commit includes dynamic order type and origin filtering as well as color settings to identify these

--- a/app/src/main/res/layout/order_item_done_layout1.xml
+++ b/app/src/main/res/layout/order_item_done_layout1.xml
@@ -16,6 +16,14 @@
             android:textColor = "@color/white"
             android:text = "Order ID"/>
 
+        <TextView
+            android:id = "@+id/order_detail_text"
+            android:layout_below="@id/order_id_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding = "16dp"
+            android:text = "Small Coffee"/>
+
         <Button
             android:id = "@+id/done_button"
             android:background="@color/dark_blue"
@@ -25,12 +33,5 @@
             android:layout_height="wrap_content"
             android:text = "UNDO"/>
 
-        <TextView
-            android:id = "@+id/order_detail_text"
-            android:layout_below="@id/order_id_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding = "16dp"
-            android:text = "Small Coffee"/>
 
     </RelativeLayout>
