--- a/app/src/main/res/layout/order_item_layout2.xml
+++ b/app/src/main/res/layout/order_item_layout2.xml
@@ -25,6 +25,18 @@
             android:background = "@color/dark_blue"
             android:text = "Order ID"/>
 
+        <TextView
+            android:id="@+id/order_detail_text"
+            android:scrollbars="vertical"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:fadeScrollbars="false"
+            android:layout_below="@id/order_id_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:padding = "16dp"
+            android:text = "Small Coffee"/>
+
         <Button
             android:id = "@+id/done_button"
             android:background="@color/dark_blue"
@@ -36,17 +48,6 @@
             android:layout_height="wrap_content"
             android:text = "DONE"/>
 
-        <TextView
-            android:id="@+id/order_detail_text"
-            android:scrollbars="vertical"
-            android:scrollbarAlwaysDrawVerticalTrack="true"
-            android:fadeScrollbars="false"
-            android:layout_below="@id/order_id_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:padding = "16dp"
-            android:text = "Small Coffee"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -69,6 +70,15 @@
             android:textSize="20sp"
             android:text = "Order ID"/>
 
+        <TextView
+            android:id="@+id/order_detail_text2"
+            android:layout_below="@id/order_id_text2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding = "16dp"
+            android:textSize="20sp"
+            android:text = "Small Coffee"/>
+
         <Button
             android:id = "@+id/done_button2"
             android:layout_alignParentBottom="true"
@@ -80,14 +90,6 @@
             android:layout_height="wrap_content"
             android:text = "DONE"/>
 
-        <TextView
-            android:id="@+id/order_detail_text2"
-            android:layout_below="@id/order_id_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding = "16dp"
-            android:textSize="20sp"
-            android:text = "Small Coffee"/>
     </RelativeLayout>
 
 </LinearLayout>
