--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,13 @@
     <color name = "dark_blue">#ff8392ff</color>
     <!--<color name = "dark_blue">#ff2020be</color>-->
     <color name = "grey">#e3e3e3e3</color>
+
+
+    <color name = "blue">#1022E8</color>
+    <color name = "green">#10E829</color>
+    <color name = "red">#E81038</color>
+
+    <color name = "light_blue">#B1F1F2</color>
+    <color name = "light_green">#C3F2B1</color>
+
 </resources>
