--- a/app/src/main/res/layout/order_item_done_layout1.xml
+++ b/app/src/main/res/layout/order_item_done_layout1.xml
@@ -7,11 +7,20 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id = "@+id/countdown_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textSize="20sp"
+            android:padding = "2dp" />
+
+        <TextView
+            android:layout_below = "@id/countdown_text"
             android:id = "@+id/order_id_text"
             android:layout_width="match_parent"
             android:gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:padding="2dp"
             android:background = "@color/dark_blue"
             android:textColor = "@color/white"
             android:text = "Order ID"/>
@@ -21,7 +30,7 @@
             android:layout_below="@id/order_id_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding = "16dp"
+            android:padding = "2dp"
             android:text = "Small Coffee"/>
 
         <Button
@@ -31,6 +40,8 @@
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="0dp"
+            android:padding = "2dp"
             android:text = "UNDO"/>
 
 
