--- a/app/src/main/res/layout/order_item_layout1.xml
+++ b/app/src/main/res/layout/order_item_layout1.xml
@@ -6,23 +6,32 @@
         android:background="@color/white"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id = "@+id/order_id_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:padding="16dp"
-            android:background = "@color/dark_blue"
-            android:textColor="@color/white"
-            android:text = "Order ID"/>
+    <TextView
+        android:id = "@+id/countdown_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textSize="20sp"
+        android:padding = "2dp" />
 
-        <TextView
-            android:id = "@+id/order_detail_text"
-            android:layout_below="@id/order_id_text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding = "16dp"
-            android:text = "Small Coffee"/>
+    <TextView
+        android:layout_below = "@id/countdown_text"
+        android:id = "@+id/order_id_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:padding="2dp"
+        android:background = "@color/dark_blue"
+        android:textColor="@color/white"
+        android:text = "Order ID"/>
+
+    <TextView
+        android:id = "@+id/order_detail_text"
+        android:layout_below="@id/order_id_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding = "2dp"
+        android:text = "Small Coffee"/>
 
     <Button
         android:id = "@+id/done_button"
@@ -31,6 +40,8 @@
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="0dp"
+        android:padding="2dp"
         android:text = "DONE"/>
 
     </RelativeLayout>
