--- a/app/src/main/res/layout/order_item_done_layout2.xml
+++ b/app/src/main/res/layout/order_item_done_layout2.xml
@@ -34,17 +34,10 @@
             android:textColor = "@color/white"
             android:text = "Order ID"/>
 
-        <TextView
-            android:id="@+id/order_detail_text"
-            android:scrollbars="vertical"
-            android:scrollbarAlwaysDrawVerticalTrack="true"
-            android:fadeScrollbars="false"
-            android:layout_below="@id/order_id_text"
+        <ListView
+            android:id = "@+id/line_item_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="20sp"
-            android:padding = "2dp"
-            android:text = "Small Coffee"/>
+            android:layout_height="wrap_content"/>
 
         <Button
             android:id = "@+id/done_button"
@@ -90,14 +83,10 @@
             android:textSize="20sp"
             android:text = "Order ID"/>
 
-        <TextView
-            android:id="@+id/order_detail_text2"
-            android:layout_below="@id/order_id_text2"
+        <ListView
+            android:id = "@+id/line_item_list2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding = "2dp"
-            android:textSize="20sp"
-            android:text = "Small Coffee"/>
+            android:layout_height="wrap_content"/>
 
         <Button
             android:id = "@+id/done_button2"
