--- a/app/src/main/res/layout/line_item_view.xml
+++ b/app/src/main/res/layout/line_item_view.xml
@@ -6,16 +6,19 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:id = "@+id/line_item_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <ImageView
+        android:paddingRight="8dp"
         android:id = "@+id/item_checked_image"
         android:layout_alignParentRight="true"
         android:src = "@drawable/ic_check_circle_black_24dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="wrap_content"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
