--- a/app/src/main/res/layout/line_item_view.xml
+++ b/app/src/main/res/layout/line_item_view.xml
@@ -3,22 +3,30 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
+    <View
+        android:id = "@+id/margin_view"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/black"
+        android:layout_alignParentTop="true"/>
 
     <TextView
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
+        android:layout_below = "@id/margin_view"
         android:id = "@+id/line_item_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <ImageView
         android:paddingRight="8dp"
+        android:layout_below = "@+id/margin_view"
         android:id = "@+id/item_checked_image"
         android:layout_alignParentRight="true"
         android:src = "@drawable/ic_check_circle_black_24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="invisible"/>
+
 
 </RelativeLayout>
