includes many changes and features for full service restaurants

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -39,20 +39,52 @@
         <item>@string/str60</item>
     </array>
 
+    <array name="order_width_entries">
+        <item>@string/str2</item>
+        <item>@string/str3</item>
+        <item>@string/str4</item>
+        <item>@string/str5</item>
+        <item>@string/str6</item>
+    </array>
+
+    <array name = "order_width_values">
+        <item>@string/str2</item>
+        <item>@string/str3</item>
+        <item>@string/str4</item>
+        <item>@string/str5</item>
+        <item>@string/str6</item>
+    </array>
+
 
     <array name = "order_type_entry_vals">
     </array>
 
     <array name = "order_type_color">
+        <item>@string/defaultstr</item>
         <item>@string/blue</item>
         <item>@string/green</item>
         <item>@string/red</item>
     </array>
 
     <array name = "order_type_color_vals">
+        <item>@string/backgroundcode</item>
         <item>@string/bluecode</item>
         <item>@string/greencode</item>
         <item>@string/redcode</item>
+    </array>
+
+    <array name = "label_color_entries">
+        <item>@string/disregard</item>
+        <item>@string/blue</item>
+        <item>@string/red</item>
+        <item>@string/green</item>
+    </array>
+
+    <array name = "label_color_vals">
+        <item>@string/disregardstr</item>
+        <item>@string/bluecode</item>
+        <item>@string/redcode</item>
+        <item>@string/greencode</item>
     </array>
 
     <array name = "origin_device_color">
@@ -65,6 +97,36 @@
         <item>@string/whitecode</item>
         <item>@string/lightbluecode</item>
         <item>@string/lightgreencode</item>
+    </array>
+
+    <array name = "order_age_entries">
+        <item>@string/entry0.5</item>
+        <item>@string/entry1</item>
+        <item>@string/entry1.5</item>
+        <item>@string/entry2</item>
+        <item>@string/entry2.5</item>
+        <item>@string/entry3</item>
+        <item>@string/entry3.5</item>
+        <item>@string/entry4</item>
+        <item>@string/entry4.5</item>
+        <item>@string/entry5</item>
+        <item>@string/entry5.5</item>
+        <item>@string/entry6</item>
+    </array>
+
+    <array name = "order_age_values">
+        <item>@string/str0.5</item>
+        <item>@string/str1</item>
+        <item>@string/str1.5</item>
+        <item>@string/str2</item>
+        <item>@string/str2.5</item>
+        <item>@string/str3</item>
+        <item>@string/str3.5</item>
+        <item>@string/str4</item>
+        <item>@string/str4.5</item>
+        <item>@string/str5</item>
+        <item>@string/str5.5</item>
+        <item>@string/str6</item>
     </array>
 
 </resources>
