--- a/app/src/main/res/layout/order_item_done_layout1.xml
+++ b/app/src/main/res/layout/order_item_done_layout1.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout
+    xmlns:android = "http://schemas.android.com/apk/res/android"
+    android:id = "@+id/overflow_linear_layout"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <RelativeLayout
-        xmlns:android = "http://schemas.android.com/apk/res/android"
+
+        android:id = "@+id/order_relative_layout"
         android:layout_margin="2dp"
         android:layout_width="match_parent"
         android:background="@color/white"
@@ -18,17 +27,12 @@
             android:layout_below = "@id/countdown_text"
             android:id = "@+id/order_id_text"
             android:layout_width="match_parent"
-            android:gravity="center_horizontal"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:padding="2dp"
             android:background = "@color/dark_blue"
-            android:textColor = "@color/white"
+            android:textColor="@color/white"
             android:text = "Order ID"/>
-
-        <ListView
-            android:id = "@+id/line_item_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
 
         <Button
             android:id = "@+id/done_button"
@@ -38,8 +42,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="0dp"
-            android:padding = "2dp"
+            android:padding="2dp"
             android:text = "UNDO"/>
 
+        <ListView
+            android:layout_above="@id/done_button"
+            android:layout_below = "@+id/order_id_text"
+            android:id = "@+id/line_item_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:dividerHeight="0dp"/>
 
     </RelativeLayout>
+
+</LinearLayout>
